# psadify

./: .gitignore  README.md  docker-compose.yml  setup.cfg
Dockerfiles/: Dockerfile.psadify
scripts/: .doit.db.db  README.md
src/psadify/: __init__.py  command_line.py  psadify.py
tests/: test_get_last_attacks.py  test_startup_logfiles_avail.py
