[metadata]
name = psadify
version = 1.0.1
author = Matt Westfall 
author_email = disloops@gmail.com
description = PSADify is a tool for converting Port Scan Attack Detector (PSAD) output into HTML.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/disloops/psadify
project_urls =
    Bug Tracker = https://github.com/disloops/psadify/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
# this is the min python3 version on RasPi ZeroW
python_requires = >=3.7 

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    psadify = psadify.command_line:main
